# longport-quant-new

./: .env.timezone_kelly_example  .gitignore  AGENTS.md  ANALYSIS_LOGGING_FIX.md  AUTO_SYNC_ON_INSUFFICIENT_DATA.md  BUGFIX_ETF_ANALYSIS.md  BUY_POWER_ANALYSIS.md  CODE_PATCHES.md  CONCURRENT_OPTIMIZATION.md  CRITICAL_BUG_FIX_SIGNAL_DELETION.md  DATABASE_FIX_SUMMARY.md  DELIVERABLES.md  DYNAMIC_STOP_LOSS_DESIGN.md  DYNAMIC_STOP_LOSS_IMPLEMENTATION.md  FAILED_SIGNAL_ROTATION_FIX.md  FD_LEAK_COMPLETE_FIX.md  FINAL_DIAGNOSIS_AND_SOLUTION.md  FIX_CLIENT_INITIALIZATION.md  FIX_DUPLICATE_ORDERS.md  FIX_REDIS_TIMEOUT.md  FUND_CHECK_FIX_SUMMARY.md  HYBRID_STRATEGY_UPGRADE.md  IMPLEMENTATION_SLACK_NOTIFICATIONS.md  KLINE_HYBRID_MODE_IMPLEMENTATION.md  MARKET_TIME_FIX_20251110.md  PRIORITY_QUEUE_FIX.md  PROJECT_STATUS.md  QUANT_FRONTEND_TECHNICAL_PROPOSAL.md  QUEUE_CLEANUP_GUIDE.md  QUICK_FIX_GUIDE.md  QUICK_START.md  QUICK_START_AUTO_TRADING.md  QUICK_START_CANCEL_ORDERS.md  README.md  README_BUY_POWER_ISSUE.md  README_TRADING_SYSTEM.md  REALTIME_ROTATION_OPTIMIZATION.md  REALTIME_TRADING_FINAL.md  REDIS_QUEUE_MIGRATION.md  SIGNAL_DEDUPLICATION_FIX.md  (+68 more)
configs/: api_limits.yml  settings.example.toml  settings.toml  watchlist.example.yml  watchlist.yml
docs/: API_RATE_LIMIT_FIX_2025.md  BATCH_CANCEL_ORDERS.md  BUILTIN_WATCHLIST.md  BUYING_POWER_PRECHECK_2025.md  BUY_SIGNAL_PRECHECK_2025.md  DATABASE_QUERIES.md  FRONTEND_QUICKSTART.md  HIGH_SCORE_SIGNAL_NOTIFICATION.md  LIVE_TRADING_WEB_UI.md  MARKET_AWARE_TRADING.md  POSITION_EVALUATION_SYSTEM.md  POSITION_ROTATION_ANALYSIS_2025.md  (+16 more)
(+294 files in other folders)
